index.css
body {
    margin: 0;
    font-family: 'Smythe', cursive;
    font-size: 1.25rem;
    background: url('./images/background.jpg');
    background-position: center;
    background-size: cover;
    background-attachment: fixed;
    letter-spacing: 2px;
} 

.container{
    display: flex;
    flex-direction: column;
    margin: 1.875em auto;
    max-width: 750px;
    width: 80%;
    background: rgba(255, 255, 255, 0.601);
    border-radius: 10px;
}

header {
    text-align: center;
    color: whitesmoke;
    font-size: 1.875rem;
    text-shadow: 3px 3px 0px black;
}

.food-item-description{
    width: 70%;
}

.food-item-container{
    display: flex;
    margin: 0.625em auto;
    border-bottom: 1px solid #F5F5F5;
}

.order-container{
    padding: 3.125em;
}

.order-container .title{
    text-align: center;
    padding: 1.875em;
}

.food-item-emoji{
    font-size: 10vw;
    margin: 1%;
}

.food-ing{
    color: #3d3d3d;
    font-size: 1.25rem;
    flex-wrap: wrap;
    word-break: break-all;
}

.add-to-card-btn{
    border-radius: 50%;
    width: 1.5em;
    height: 1.5em;
    object-fit: cover;
    align-self: center;
    margin: 0.625em 1.25em;
    border: 2px solid #786f6f;
    background: none;
    color: #3C3C3C;
    font-size: 2.1875rem;
    box-shadow: 3px 3px 0px black;
}

.add-to-card-btn:hover{
    background: #DEDEDE;
    cursor: pointer;
}

.hidden{
    display: none;
}

.card-item-price, .total-price{
    box-shadow: 1px 1px 0px black;
    display: inline-block;
    width: 100%;
    text-align: right;
}

.remove{
    cursor: pointer;
    margin: auto 0.3125em;
    color: #4a4a4a;
    font-size: 1rem;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

.complete-order-btn {
    background: #16DB99;
    color: white;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    width: 100%;
    border: none;
    padding: 1.25em;
    margin: 3.125em auto;
    cursor: pointer;
    border-radius: 5px;
    font-weight: bold;

}

.complete-order-btn:hover{
    box-shadow: 0px 0px 10px black;
}

.modal{
    width: 50%;
    max-width: 750px;
    border: 1px solid black;
    position: fixed;
    top: 0%;
    margin: 12vh 25vw;
    background-color: white;
    padding: 3.125em;
    display: flex;
    flex-direction: column;
    box-shadow: 0px 0px 10px black;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    border-radius: 5px;  
}

@media (max-width: 1100px) {
    .modal {
        margin: 10vh 10vw;
    }
}

.modal input{
    padding: 1.5em;
    margin: 0.625em 0;
    width: 100%;
    border-radius: 5px;
    word-break: break-all;
    font-size: 1rem;
}

.modal input:focus{
    box-shadow: 0px 0px 10px black;
}

.modal button {
    color: white;
    background: #16DB99;
    border: none;
    width: 100%;
    padding: 1.25em;
    margin: 1.875em auto;
    border-radius: 5px;
}

.modal button:hover {
    cursor: pointer;
    box-shadow: 0px 0px 10px black;
}

.delivery-message{
    color: #065F46;
    background-color: #c6efe2;
    padding: 1.875em;
    margin: 3em 0px;
}

